# hitchhiker-rust

./: .gitmodules  Cargo.toml  ds3_theory.lyx  pom.xml
doc/: #ds3_theory.lyx#  ds3_theory.lyx
mono/: pom.xml
mono/src/main/scala/com/thunderhead/: App.scala
mono/src/main/scala/com/thunderhead/api/: Priority.java
mono/src/main/scala/com/thunderhead/api/async/: Reactor.java  Responder.java
mono/src/main/scala/com/thunderhead/api/kv/: KvSnapshot.java  KvTransaction.java
mono/src/main/scala/com/thunderhead/api/transaction/: Counter.java  KeyValueDistributedTransactor.java  KvReadWriteSnapshot.scala  (+5 more)
mono/src/main/scala/com/thunderhead/core/: AbstractByteString.java  AbstractDbObject.java  ByteSource.java  ByteString.java  DataManager.java  DataReactor.java  DataResolver.java  Datum.java  DbCreationContext.java  DbCreator.java  DbObject.java  EventHandler.java  KvTransaction.java  ManifoldInfo.scala  Reactor.scala  ReactorTask.scala  Responder.scala  Response.scala  ResponseImpl.scala  ResponseListener.scala  Stamp.java  StampImpl.java  State.java  Task.scala  TreeRepo.java  ValueSink.java
mono/src/main/scala/com/thunderhead/mock/: KVStore.java  KvStoreSimple.scala
mono/src/test/scala/com/thunderhead/core/: GatewayTest.scala
mono/src/test/scala/com/thunderhead/test/: EnvironmentTestRunner.java  KiloReactorEnvironment.scala
rust/: Cargo.toml
rust/experiments/: Cargo.toml  LICENSE  build.rs
rust/experiments/src/: main.rs
rust/experiments/src/c/: thread_local.c
rust/lib/chain/: Cargo.toml
rust/lib/chain/src/: _impl.rs  chain.rs  future.rs  lib.rs
rust/lib/datastore/: Cargo.toml
rust/lib/datastore/src/: lib.rs
rust/lib/datastore/src/datatype/: datatypes.rs  io.rs  js.rs  lens.rs  map.rs  map_source.rs  mod.rs
rust/lib/datastore/src/dynatree/: mod.rs
rust/lib/datastore/src/engine/: error.rs  js.rs  mod.rs  processor.rs  script_store.rs  traits.rs  value.rs
rust/lib/datastore/src/engine/spidermonkey/: README.md  active_context.rs  context.rs  engine.rs  error.rs  executor.rs  factory.rs  globals.rs  jscontext.rs  mod.rs  spec.rs  system.rs  test.rs  testlib.rs  value.rs
rust/lib/datastore/src/engine/spidermonkey/js/system/: get_store.js
rust/lib/datastore/src/engine/spidermonkey/js/td/: td.js
rust/lib/datastore/src/engine/spidermonkey/js/test/: empty.js  environment_smoke_test.js  schema_smoke_test.js  simple_schema.js
rust/lib/datastore/src/frontend/: mod.rs
rust/lib/datastore/src/lens/: lens.rs  map.rs  mod.rs
rust/lib/datastore/src/platform/: mod.rs
rust/lib/datastore/src/platform/test_js/: schema_smoke_test.js
rust/lib/datastore/src/system/: mod.rs
rust/lib/datastore/src/system/js/: Td.js  parse_json.js  serialize_json.js  syslib.js
rust/lib/http/: Cargo.toml
rust/lib/http/src/: lib.rs
rust/lib/server/: Cargo.toml
rust/lib/server/src/: lib.rs  server.rs  tests.rs  thunderhead.rs  util.rs
rust/lib/server/src/http/: mod.rs
rust/lib/server/src/react/: mod.rs
rust/lib/server/src/testlib/: mod.rs
rust/lib/store/: Cargo.toml
rust/lib/store/src/: data.rs  lib.rs  memory.rs  testlib.rs  traits.rs  util.rs
rust/lib/store/src/alloc/: attic.rs  mod.rs  scoped.rs
rust/lib/store/src/bench/: mod.rs
rust/lib/store/src/data/: mod.rs  rcslice.rs  slice.rs  traits.rs  util.rs
rust/lib/store/src/tdfuture/: bounce.rs  chain.rs  chain_future.rs  cont.rs  future.rs  loops.rs  mod.rs  phkt.rs  spin.rs  state.rs  tdfuture.rs
rust/lib/store/src/tree/: btree.rs  bucket.rs  bucketref.rs  counter.rs  design.md  hotnode.rs  memnode.rs  mod.rs  nodeptr.rs  noderef.rs  testlib.rs  tests.rs  traits.rs  ttree.rs  util.rs
rust/src/: lib.rs  main.rs
rust/src/js/: mod.rs
rust/src/json/: mod.rs
src/: lib.rs  sync.rs  testlib.rs  traits.rs  traits_old.rs  util.rs
src/alloc/: attic.rs  mod.rs  scoped.rs  stack.rs
src/bench/: mod.rs
src/data/: mod.rs  range.rs  rcbytes.rs  rcslice.rs  traits.rs  util.rs
src/hitchhiker/: hotnode.rs
src/main/scala/com/thunderhead/api/: Datum.java
src/main/scala/com/thunderhead/api/async/: Request.java
src/main/scala/com/thunderhead/api/kv/: KvStore.java
src/main/scala/com/thunderhead/api/transaction/: KeyValueSnapshot.java  KeyValueSnapshottingStore.java  KvReadWriteSnapshot.scala  KvSnapshot.scala  KvSnapshotStore.scala  Range.scala  TransactionView.java
src/main/scala/com/thunderhead/core/: AbstractDbObject.java  DataManager.java  DataReactor.java  DatastoreFactory.java  DbCreationContext.java  DbCreator.java  KvStore.java  KvTransaction.java  ManifoldClass.java  ReactorManager.scala  Stamp.java  State.java  StateImpl.java  Task.scala  TaskContext.scala  TaskImpl.scala  TaskListener.scala  TaskSource.scala  TreeRepo.java  ValueSink.java
src/main/scala/com/thunderhead/core/conf/: LocalEnvironment.java  ReactorSet.scala  ReactorStarter.java  Thunderhead.java
src/main/scala/com/thunderhead/core/engine/: Task.java  TaskQueue.java
src/main/scala/com/thunderhead/core/fabric/: Codec.java  Gateway.scala  IncomingMessage.java  MessagePacket.scala  NetDevice.scala  OutgoingMessage.java
src/main/scala/com/thunderhead/core/impl/: ManifoldInfoImpl.scala  ReactorManagerAbstract.scala
src/main/scala/com/thunderhead/core/reactor/: Reactor.java  TaskListener.java
src/main/scala/com/thunderhead/core/tx/: ComboSnapshot.java  LocalTxManager.java  TxHistory.java  TxSnapshot.java
src/main/scala/com/thunderhead/mock/: KvStoreSimple.scala
src/main/scala/com/thunderhead/mock/fabric/: SingleThreadMockFabric.scala
src/tdfuture/: future.rs  loops.rs  mod.rs  phkt.rs  tdfuture.rs
src/test/scala/com/thunderhead/core/: GatewayTest.scala  SimpleReactorIntegrationTest.scala
src/test/scala/com/thunderhead/test/: EnvironmentProvider.scala  EnvironmentTestRunner.java  EnvironmentTestSpec.scala  KiloReactorConfiguration.scala  ThunderheadTest.java  ThunderheadTestCase.java
src/tree/: allocator.rs  btree.rs  bucketref.rs  bytebox.rs  counter.rs  design.md  memnode.rs  mod.rs  node.rs  noderef.rs  testlib.rs  tests.rs  util.rs
tla/: consensus.tla  pushcache.tla
tla/pushcache.toolbox/: .project
(+41 files in other folders)
