[package]
name = "thunderhead"
version = "0.1.0"
authors = ["Mike Thvedt <mike.thvedt@gmail.com>"]

[dependencies]
env_logger = "0.3"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto"}

thunderhead-datastore = { path = "lib/datastore" }
thunderhead-server = { path = "lib/server" }
thunderhead-store = { path = "lib/store" }

[profile.release]
# TODO: should have a profiling profile instead of debug = true.
debug = true
lto = true

[workspace]
