[package]
name = "thunderhead-datastore"
version = "0.1.0"
authors = ["Mike Thvedt <mike.thvedt@gmail.com>"]

[dependencies]
thunderhead-store = { path = "../store" }

bincode = "0.6.0"
futures = "0.1.2"
serde = "0.8.17"
serde_derive = "0.8.3"
serde_json = "0.8.3"

[profile.release]
# TODO: should have a profiling profile instead of debug = true.
debug = true
lto = true
