[package]
name = "thunderhead-datastore"
version = "0.1.0"
authors = ["Mike Thvedt <mike.thvedt@gmail.com>"]

[dependencies]
# chain = { path = "../chain" }
thunderhead-store = { path = "../store" }

bincode = "0.6.0"
futures = "0.1.2"
lazy_static = "0.2.1"
js = { git = "https://github.com/servo/rust-mozjs" }
serde = "0.8.17"
serde_derive = "0.8.18"
serde_json = "0.8.3"

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4"
