[package]
name = "thunderhead-server"
version = "0.1.0"
authors = ["Mike Thvedt <mike.thvedt@gmail.com>"]

[dependencies]
# bincode = "0.6.0"
futures = "0.1.6"
httparse = "1.2.0"
# hyper = { git = "https://github.com/hyperium/hyper.git" }
# lazy_static = "0.2.1"
# js = { git = "https://github.com/servo/rust-mozjs" }
# libc = "0.2.17"
# serde = "0.8.17"
# serde_derive = "0.8.19"
# serde_json = "0.8.3"
tokio-core = "0.1.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

thunderhead-datastore = { path = "../datastore" }
thunderhead-store = { path = "../store" }

[dev-dependencies]
# quickcheck = "0.4"
# quickcheck_macros = "0.4"
