[package]
name = "thunderhead-store"
version = "0.1.0"
authors = ["Mike Thvedt <mike.thvedt@gmail.com>"]

[dependencies]
byteorder = "0.5"
futures = "0.1"

# TODO: these used by testlib. Need better isolation.
rand = "0.3"
time = "0.1"

[dev-dependencies]

# TODO: scrub quickcheck.

# quickcheck = "0.3"
# quickcheck_macros = "0.2"

# For profiling.
# TODO does this slow things down? Can we make another profile?
[profile.release]
debug = true
